--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style2.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style2.css
@@ -1,19 +1,34 @@
 .super-mario {
-    width: 10px;
+    width: 8%;
+    position: absolute;
   }
   
   .goomba {
-    width: 100px;
+    width: 6%;
+    position: absolute;
+    top: 193px;
+    left: 75px;
+    border-radius: 100%;
   }
   
   .baloon {
-  
+    width: 12%;
+    position: absolute;
+    left: 140px;
+    z-index: 1;  
   }
   
   .speech {
-    font-size: 25px;
+    font-size: 13px;
+    position: absolute;
+    left: 150px;
+    top: 95px;
+    z-index: 2;
   }
   
   .bowser {
     width: 200px;
+    position: absolute;
+    top:135px;
+    left: 250px;
   }
