Atualizando arquivos index2.html e style2.css

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style2.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style2.css
@@ -1,4 +1,4 @@
-.super-mario {
+  .super-mario {
     width: 8%;
     position: absolute;
   }
@@ -6,8 +6,8 @@
   .goomba {
     width: 6%;
     position: absolute;
-    top: 193px;
-    left: 75px;
+    top: 20.5%;
+    left: 6.2%;
     border-radius: 100%;
   }
   
