Alteração com base no gabarito

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercício-foguete/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercício-foguete/style.css
@@ -6,19 +6,19 @@ div:hover{
 div:nth-child(4){
     background-color: red;
     margin-right: 86%;
-    font-style: italic;
     text-align: center;
+    color: purple;
 }
 div:nth-child(5){
     background-color: rgb(255, 136, 0);
     margin-right: 86%;
     text-align: center;
+    color: green;
 }
 div:nth-child(6){
     background-color: rgb(21, 199, 30);
     margin-right: 75%;
     font-size: 2em;
-    font-style: italic;
     text-align: center;
 }
 div:nth-child(7){
@@ -26,13 +26,14 @@ div:nth-child(7){
     margin-right: 86%;
     color: wheat;
     text-align: center;
+    font-family: monospace;
 }
 div:nth-child(8){
     background-color: wheat;
     margin-right: 86%;
-    font-style: italic;
     text-align: center;
+    text-decoration: line-through;
 }
-h3{
-    font-weight: 200;
-}
+div:nth-child(even) < h3 {
+    font-style: italic
+  }
