Alteração com base no gabarito

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercício-foguete/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/exercício-foguete/style.css
@@ -34,6 +34,6 @@ div:nth-child(8){
     text-align: center;
     text-decoration: line-through;
 }
-div:nth-child(even) < h3 {
+div:nth-child(even) h3{
     font-style: italic
   }
