--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/introducao-a-html-e-css.4/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/introducao-a-html-e-css.4/style.css
@@ -1,13 +1,19 @@
 body {
     background-color:#e9f1ef;
+    font-family: Josefin Sans,Helvetica,Arial,sans-serif;
     margin: 0;
 }
 h1 {
     text-align: center;
-    font-family: GeoEditBold,Franklin Gothic Medium,Franklin Gothic,ITC Franklin Gothic,Helvetica,Arial,sans-serif;
-    font-size: 42px;
-    color: #ABC8C0;
-    background-color: #26413C;
+    font-weight: 400;
+    font-size: 55px;
+    text-shadow: rgb(0, 0, 0) 2px 1px 10px;
+    color: #ebfff9;
+    /* background-color: #26413C; */
+    background-image: url(ocean.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 60% 50%;
     margin: 0;
     padding-top: 40px;
     height: 90px;
@@ -15,16 +21,44 @@ h1 {
 }
 nav{
     text-align: end;
-    background-color: rgb(189, 189, 0);
-    height: 40px;
+    background-color: #FFCE00;
+    height: 30px;
 }
 ul{
     margin: 0;
 }
 nav ul li {
-    margin-top: 8px;
+    margin-top: 7px;
     display: inline-block;
     margin-right: 30px;
     font-size: 20px;
-    font-family: GeoEditBold,Franklin Gothic Medium,Franklin Gothic,ITC Franklin Gothic,Helvetica,Arial,sans-serif;
+}
+nav ul li:hover{
+    color: #f1f1f1;
+}
+article{
+    margin-top: 25px;
+    margin-left: 5%;
+    width: 60%;
+    text-align: justify;
+    display: inline-block;
+    border: 2px solid red;
+}
+aside {
+    float: right;
+    /* border-radius: 20%; */
+    display:inline-block;
+    border: 2px solid red;
+    width: 32%;
+    margin-top: 25px;
+}
+footer{
+    border: 2px solid red;
+    color: #e9f1ef;
+    font-size: 18px;
+    font-style: italic;
+    text-align: center;
+    background-color: #42273b;
+    height: 50px;
+    vertical-align: middle;
 }
