--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/introducao-a-html-e-css.4/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/introducao-a-html-e-css.4/style.css
@@ -3,62 +3,88 @@ body {
     font-family: Josefin Sans,Helvetica,Arial,sans-serif;
     margin: 0;
 }
-h1 {
-    text-align: center;
-    font-weight: 400;
-    font-size: 55px;
-    text-shadow: rgb(0, 0, 0) 2px 1px 10px;
-    color: #ebfff9;
-    /* background-color: #26413C; */
-    background-image: url(ocean.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 60% 50%;
-    margin: 0;
-    padding-top: 40px;
-    height: 90px;
-    font-style: italic;
-}
-nav{
-    text-align: end;
-    background-color: #FFCE00;
-    height: 30px;
-}
-ul{
-    margin: 0;
-}
-nav ul li {
-    margin-top: 7px;
-    display: inline-block;
-    margin-right: 30px;
-    font-size: 20px;
-}
-nav ul li:hover{
-    color: #f1f1f1;
-}
-article{
-    margin-top: 25px;
-    margin-left: 5%;
-    width: 60%;
-    text-align: justify;
-    display: inline-block;
-    border: 2px solid red;
-}
-aside {
-    float: right;
-    /* border-radius: 20%; */
-    display:inline-block;
-    border: 2px solid red;
-    width: 32%;
-    margin-top: 25px;
-}
-footer{
-    border: 2px solid red;
-    color: #e9f1ef;
-    font-size: 18px;
-    font-style: italic;
-    text-align: center;
-    background-color: #42273b;
-    height: 50px;
-    vertical-align: middle;
-}
+    h1 {
+        text-align: center;
+        font-weight: 400;
+        font-size: 55px;
+        text-shadow: rgb(0, 0, 0) 2px 1px 10px;
+        color: #ebfff9;
+        background-image: url(ocean.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: 60% 50%;
+        margin: 0;
+        padding-top: 40px;
+        height: 90px;
+        font-style: italic;
+    }
+    h2{
+        font-size: 36px;
+    }
+    h3{
+        font-size: 30px;
+        line-height: 30px;
+    }
+    section{
+        margin-top: 50px;
+    }
+    nav{
+        text-align: end;
+        background-color: #FFCE00;
+        height: 30px;
+    }
+    nav ul{
+        margin: 0;
+    }
+    nav ul li {
+        margin-top: 7px;
+        display: inline-block;
+        margin-right: 30px;
+        font-size: 20px;
+    }
+    nav ul li:hover{
+        color: #f1f1f1;
+    }
+    article{
+        margin-top: 25px;
+        margin-left: 8%;
+        width: 67%;
+        text-align: justify;
+        display: inline-block;
+        font-size: 18px;
+        line-height: 20px;
+    }
+    .midia{
+        display: block;
+        margin: 0px auto;
+    }
+    aside {
+        color: #ebfff9;
+        background-color: #26413C;
+        float: right;
+        border-radius: 3%;
+        display:inline-block;
+        text-align: center;
+        width: 20%;
+        height: 250px;
+        margin-top: 25px;
+        margin-left: 60px;
+        position: fixed;
+    }
+    aside a{
+        color: aquamarine;
+    }
+    #referencias {
+        padding-bottom: 30px;
+    }
+    footer{
+        display: inline-block;
+        padding-top: 25px;
+        width: 100%;
+        color: #e9f1ef;
+        font-size: 18px;
+        font-style: italic;
+        text-align: center;
+        background-color: #42273b;
+        height: 50px;
+    }
