--- a/fundamentos/secao-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercicios-finais/alice.css
+++ b/fundamentos/secao-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercicios-finais/alice.css
@@ -48,3 +48,54 @@ footer p {
   font-size: 75%;
   font-style: italic;
 }
+
+@media screen and (min-width: 800px) {
+  body{
+    margin: 0 8%;
+    font-size: 25px;
+    background-color: rgb(173, 224, 226);
+  }
+  
+  header p {
+    font-size: 180%;
+    font-weight: bold;
+    text-align: center;
+  }
+  
+  nav ul {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 2% 0 57%;
+  
+  }
+  
+  nav ul li {
+    list-style: none;
+  }
+  
+  h1 {
+    margin-top: 10%;
+    font-size: 26px;
+  }
+
+  h2 {
+    font-size: 130%;
+  }
+  
+  p {
+    text-align: justify;
+    text-indent: 3%;
+  }
+  
+  footer {
+    margin-top: 5%;
+    margin-bottom: 10%;
+  }
+  footer h3 {
+    font-size: 32px;
+  }
+  footer p {
+    font-size: 85%;
+    font-style: italic;
+  }
+}
