--- a/front-end/secao-1-introducao-ao-frontend-e-javaScript-asssincrono/dia-3-exercicio-casa-de-cambio/src/style.css
+++ b/front-end/secao-1-introducao-ao-frontend-e-javaScript-asssincrono/dia-3-exercicio-casa-de-cambio/src/style.css
@@ -75,7 +75,7 @@ label {
 .coin-box{
   color: #FFFFFF;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background-color: #2A2E32;
   margin: 10px;
   padding: 10px;
@@ -84,10 +84,14 @@ label {
 }
 
 .coin-rate {
-  color: rgb(255, 0, 0);
-  font-size: 50px;
+  color: #FFE713;
+  font-weight: 500;
 }
 
 #coin-image{
   width: 20px;
+}
+
+#coin-name{
+  margin-left: 7px;
 }
